2001-12-14  Masatake YAMATO  <yamato@redhat.com>

	* output-swf.c (output_swf_writer): roll back to
	1.4. I did wrong commit.

	2001-12-01  Martin Weber <martweb@gmx.net>

	Now using file instead of 
	name so that it works also to stdout.

	(Message-ID: <3C02BF23.9D19CCC0@gmx.net>).

2001-12-12  Masatake YAMATO  <yamato@redhat.com>

	* strgicmp.h (strgnicmp, strgicmp): added type
	of args.

	* strgicmp.[hc]: removed ^M.

2001-12-11  Martin Weber <martweb@gmx.net>

	Now commandline options are no more case sensitive.
	
	* Makefile.am (autotrace_SOURCES): Added strgicmp.[ch].

	* autotrace.dsp: Likewise.

	* main.c: Use strgicmp.

	* getopt.c: Likewise.

	* input.c: Likewise.

	* cmdline.h: Likewise.

	* strgicmp.[ch]: New files.

	(Message-ID: <3C15248C.C9AC71C9@gmx.net>).

2001-12-08  Martin Weber <martweb@gmx.net>

	* input.c (input_list): Fix a bug for magicklib support.
	"MagickLibVersion < 0x0538" => "MagickLibVersion < 0x0534".

2001-12-08  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.28.

2001-12-08  Martin Weber <martweb@gmx.net>

	* output.c: 
	* output-dxf.[ch]: DXF output is disabled.

2001-12-08  Masatake YAMATO  <yamato@redhat.com>

	Put a tag, "BEFORE_DISABLING_DXF" to the CVS repository.

2001-12-03  Martin Weber <martweb@gmx.net>

	* input.c: We should use api.h instead of
	magick.h, now also works using C++.

	* input-magick.c: Likewise.

	(Message-ID: <3C0A6916.D7C47C1F@gmx.net>).
	
2001-12-02  Martin Weber <martweb@gmx.net>

	* types.h: adopted to C++.

	* main.c (read_command_line): Likewise.

	(Message-ID: <B82F2B8A.275630@[192.168.1.2]>).

2001-12-01  Masatake YAMATO  <yamato@redhat.com>

	* README.MING: Write about Visual C++ and libming.*.

	* Makefile.am (EXTRA_DIST): added libming.*.
	
2001-12-01  Martin Weber <martweb@gmx.net>

	* input-magick.c: Fixed comments.

	* input.c: input_shortlist now supports ImageMagick formats.

	* output-pdf.c: no more a temporary file needed.

	(Message-ID: <3C07E7CB.42BB90D4@gmx.net>).
