@@ -1,7 +1,7 @@
 #include "strgicmp.h"
 #include <ctype.h>
 
-bool strgicmp (unsigned char *s1, unsigned char *s2)
+bool strgicmp (const unsigned char *s1, const unsigned char *s2)
 {
   if (s1 == NULL || s2 == NULL)
     return (false);
@@ -19,9 +19,9 @@ bool strgicmp (unsigned char *s1, unsigned char *s2)
     return (false);
 }
 
-bool strgnicmp (unsigned char *s1, unsigned char *s2, long len)
+bool strgnicmp (const unsigned char *s1, const unsigned char *s2, long len)
 {
-  long i;
+  long i = 0;
 
   if (s1 == NULL || s2 == NULL)
     return (false);
